tests/ui/async-await/issues/issue-63388-1.stderr
error[E0621]: explicit lifetime required in the type of `foo`
  --> $DIR/issue-63388-1.rs:13:5
   |
LL |           &'a self, foo: &dyn Foo
   |                          -------- help: add explicit lifetime `'a` to the type of `foo`: `&'a (dyn Foo + 'a)`
LL |       ) -> &dyn Foo
LL | /     {
LL | |
LL | |         foo
LL | |     }
   | |_____^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
